2001-05-08  Tom Tromey  <tromey@redhat.com>

	Fix for PR automake/149 and werror.test:
	* automake.in (require_file_internal): Use am_line_warning or
	am_conf_line_warning when suppressing error.
	(am_line_warning): New sub.
	(am_conf_line_warning): Save and restore warning signal.
	* tests/Makefile.am (XFAIL_TESTS): Removed werror.test.

	Fix for PR automake/36:
	* tests/Makefile.am (TESTS): Added asm.test.
	* tests/asm.test: New file.
	* automake.in (asm): Use ASFLAGS and AS.
	(lang_asm_finish): New sub.

	* automake.in (read_am_file): Removed debugging code.

	For PR automake/149:
	* tests/Makefile.am (TESTS): Added werror.test.
	(XFAIL_TESTS): Likewise.
	* tests/werror.test: New file.

	* automake.in (conditional_true_when): Don't return if we see
	`TRUE'.

	* tests/objc.test: Removed.
	* tests/Makefile.am (XFAIL_TESTS): Removed objc.test.
	(TESTS): Likewise.

	* automake.in (subst): New sub.
	(handle_languages): Use it.
	(output_lex_build_rule): Likewise; also use _am_quote.
	(check_libobjs_sources): Likewise.
	(make_paragraphs): Use subst.

	* automake.in (check_libobjs_sources): Re-fixed AMDEP_TRUE
	problem.

	* automake.in (file_contents_internal): Prototype now `$$%'.
	(register_language): Prototype now `%'.

	Fixes test subobj6.test and PR automake/160:
	* tests/Makefile.am (XFAIL_TESTS): Removed subobj6.test.
	* compile.am (mostlyclean-compile): Added MOSTLYRMS.
	(distclean-compile): Added DISTRMS.
	* tests/subobj6.test (wish_SOURCES): Updated to reflect
	`mostlyclean' use; added test for non-subdir case.
	* automake.in (compile_clean_files): New global.
	(MOSTLY_CLEAN, DIST_CLEAN): New constants.
	(initialize_per_input): Initialize compile_clean_files.
	(handle_single_transform_list): Set compile_clean_files entries.
	(handle_compile): Handle compilation cleanups.

2001-05-08  Lars J. Aas  <larsa@sim.no>

	* automake.texi (Canonicalizing Automake macros): Document not
	canonicalizing strudels (@) anymore.

2001-05-08  Akim Demaille  <akim@epita.fr>
