@@ -21,7 +21,8 @@
 if %?YLWRAP%
 	$(SHELL) $(YLWRAP) $(YACC) $< y.tab.c $*%C_SUFFIX% y.tab.h $*.h -- $(AM_YFLAGS) $(YFLAGS)
 else !%?YLWRAP%
-	$(YACC) $(AM_YFLAGS) $(YFLAGS) $< && mv y.tab.c $*%C_SUFFIX%
+	$(YACC) $(AM_YFLAGS) $(YFLAGS) $<
+	sed -e '/^#/ s,$(srcdir)/,,' y.tab.c > $*%C_SUFFIX%
 	if test -f y.tab.h; then \
 	  if cmp -s y.tab.h $*.h; then \
 	    rm -f y.tab.h; \
