@@ -18,8 +18,8 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
 # Usage:
-#     ylwrap PROGRAM INPUT [OUTPUT DESIRED]... -- [ARGS]...
-# * PROGRAM is program to run.
+#     ylwrap PROGRAM [ARGS] INPUT [OUTPUT DESIRED]... -- [ARGS]...
+# * PROGRAM is program to run; options can follow but must start with `-'.
 # * INPUT is the input file
 # * OUTPUT is file PROG generates
 # * DESIRED is file we actually want
@@ -35,6 +35,21 @@ case "$prog" in
  */*) prog="`pwd`/$prog" ;;
 esac
 
+# We also have to accept options here and append them to the program.
+# Why?  Suppose YACC is set to `bison -y'.  Clearly nobody uses
+# ylwrap, or this would have been discovered earlier!
+while :; do
+   case "$1" in
+    -*)
+       prog="$prog $1"
+       shift
+       ;;
+    *)
+       break
+       ;;
+   esac
+done
+
 # The input.
 input="$1"
 shift
@@ -43,19 +58,13 @@ case "$input" in
     # Absolute path; do nothing.
     ;;
  *)
-    # Relative path.  Make it absolute.  Why?  Because otherwise any
-    # debugging info in the generated file will point to the wrong
-    # place.  This is really gross.
+    # Relative path.  Make it absolute.
     input="`pwd`/$input"
     ;;
 esac
 
-# We don't want to use the absolute path if the input in the current
-# directory like when making a tar ball.
-input_base=`echo $input | sed -e 's|.*/||'`
-if test -f $input_base && cmp $input_base $input >/dev/null 2>&1; then
-  input=$input_base
-fi
+# The directory holding the input.
+input_dir="`echo $input | sed -e 's,/[^/]*$,,'`"
 
 pairlist=
 while test "$#" -ne 0; do
@@ -74,15 +83,7 @@ trap "cd `pwd`; rm -rf $dirname > /dev/null 2>&1" 1 2 3 15
 mkdir $dirname || exit 1
 
 cd $dirname
-case "$input" in
- /* | [A-Za-z]:*)
-    # Absolute path; do nothing.
-    ;;
- *)
-    # Make a symbolic link, hard link or hardcopy.
-    ln -s ../"$input" . > /dev/null 2>&1 || ln ../"$input" . > /dev/null 2>&1 || cp ../"$input" .
-    ;;
-esac
+
 $prog ${1+"$@"} "$input"
 status=$?
 
@@ -117,7 +118,12 @@ if test $status -eq 0; then
 	   /* | [A-Za-z]:*) target="$2";;
 	   *) target="../$2";;
 	 esac
-	 mv "$from" "$target" || status=$?
+
+	 # Edit out `#line' or `#' directives.  We don't want the
+	 # resulting debug information to point at an absolute srcdir;
+	 # it is better for it to just mention the .y file with no
+	 # path.
+	 sed -e "/^#/ s,$input_dir,," "$from" > "$target" || status=$?
       else
 	 # A missing file is only an error for the first file.  This
 	 # is a blatant hack to let us support using "yacc -d".  If -d
