@@ -1,5 +1,12 @@
 2001-05-08  Tom Tromey  <tromey@redhat.com>
 
+	For PR automake/29:
+	* ylwrap: Handle arguments to program.  Remove old code that tried
+	to avoid absolute paths and add new code to do it in all cases.
+	Removed ancient logic that tried to deal with relative path.
+	* tests/Makefile.am (TESTS): Added yacc4.test.
+	* tests/yacc4.test: New file.
+
 	Fix for PR automake/149 and werror.test:
 	* automake.in (require_file_internal): Use am_line_warning or
 	am_conf_line_warning when suppressing error.
